[gd_scene load_steps=3 format=3 uid="uid://smuhytu33fjx"]

[ext_resource type="Script" path="res://gui/interaction_call.gd" id="1_nrqpp"]
[ext_resource type="Texture2D" uid="uid://bebwhk7dv6tv5" path="res://assets/external_resources/kenney_input-prompts/Keyboard & Mouse/Default/keyboard_e.png" id="2_8uag0"]

[node name="InteractionCall" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_nrqpp")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
custom_minimum_size = Vector2(50, 0)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -61.0
offset_top = -80.0
offset_right = 61.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_8uag0")
expand_mode = 1
stretch_mode = 5

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/HBoxContainer/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Abrir Porta"
fit_content = true
scroll_active = false
autowrap_mode = 0

[connection signal="hide_interaction" from="." to="." method="_on_hide_interaction"]
[connection signal="show_interaction" from="." to="." method="_on_show_interaction"]
